[tool.poetry]
name = "workout_api"
version = "0.1.0"
description = "API de exemplo para desafio final"
authors = ["Renan <renan@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
sqlalchemy = "^2.0.0"
pydantic = "^2.1"
fastapi-pagination = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"